--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<label for = "birth"> Enter your birthday </label> <br>
 		<input type = "date" id = "birth" name = "birthday"> <br>
 		<label for = "hour"> Enter the time when you were born </label> <br>
-		<input type - "time" id = "hour" name = "time_of_birth"> <br>
+		<input type = "time" id = "hour" name = "time_of_birth"> <br>
 		<label for = "age"> Enter your Age </label> <br>
 		<input type = "number" id = "age" name = "age" min = "0" max = "100"> <br>
 		<label for = "phone"> Enter your Tel # </label> <br>
